--- a/index.css
+++ b/index.css
@@ -1,7 +1,195 @@
-*{
+
+.body{
+    font-family: 'SF Display';
     margin: 0;
+    padding: 0;
 }
 
-.hero{
-    background: url(https://unread.today/files/007afc64-288a-4208-b9d7-3eda84011c1d/1451f11….jpg);
+
+
+  
+
+
+
+
+
+.hero {
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgb(0, 0, 0)),
+    url("https://unread.today/files/007afc64-288a-4208-b9d7-3eda84011c1d/1451f11e03da76480966b636a622119a.jpg");
+    background-size: 100%;
+    height: 100vh;
+    padding: 100px;
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+    gap: 50px;
+}
+
+.hero-content{
+    margin-left: auto;
+    margin-right: auto;
+    width: 800px;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    color: white;
+    gap: 50px;
+}
+
+
+.ut-niitlel {
+    width: 1000px;
+    height: 1000px;
+    gap: 0px;
+    opacity: 0px;
+    zoom: normal;
+}
+.ut-niitlel:hover{
+    zoom: unset;
+}
+.hero-content div{
+    height: 446px;
+    width: 50%;
+    display: flex;
+    font-size: xx-large;
+}
+.hero-content h1{
+    -webkit-text-stroke: 1px white;
+    color: transparent;
+}
+.hero-content h2{
+    font-size: xx-large;
+}
+
+
+
+
+
+
+#menuToggle
+{
+  display: block;
+  position: relative;
+  top: 50px;
+  left: 50px;
+  
+  z-index: 1;
+  
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle a
+{
+  text-decoration: none;
+  color: #232323;
+  
+  transition: color 0.3s ease;
+}
+
+#menuToggle a:hover
+{
+  color: tomato;
+}
+
+
+#menuToggle input
+{
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  
+  cursor: pointer;
+  
+  opacity: 0; 
+  z-index: 2; 
+  
+  -webkit-touch-callout: none;
+}
+
+
+#menuToggle span
+{
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  
+  background: #cdcdcd;
+  border-radius: 3px;
+  
+  z-index: 1;
+  
+  transform-origin: 4px 0px;
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+#menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
+}
+
+#menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #232323;
+}
+
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+#menuToggle input:checked ~ span:nth-last-child(2)
+{
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+#menu
+{
+  position: absolute;
+  width: 300px;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  
+  background: #ededed;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  
+  
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li
+{
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+#menuToggle input:checked ~ ul
+{
+  transform: none;
+}
+.ut-menu{
+    text-align: center;
+    background-size: 100vh;
+    background-color: white;
 }
