--- a/index.css
+++ b/index.css
@@ -13,52 +13,156 @@
 
 
 
-.hero {
+
+  .hero {
     background: linear-gradient(rgba(0, 0, 0, 0.6), rgb(0, 0, 0)),
     url("https://unread.today/files/007afc64-288a-4208-b9d7-3eda84011c1d/1451f11e03da76480966b636a622119a.jpg");
     background-size: 100%;
     height: 100vh;
     padding: 100px;
-    display: flex;
-    justify-content: center;
-    justify-items: center;
-    gap: 50px;
+    margin: 0;
 }
+
+
+
+
+
+.head{
+gap: 0px;
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+}
+nav img{
+  height: 30px;
+}
+
+.head h5 {
+  font-size: medium;
+  color: white;
+}
+
+
+
+
+
+
+/* icons/ */
+.fa {
+  font-size: 30px;
+  text-decoration: none;
+  margin: 7px;
+  border-radius: 10px;
+  color: white;
+}
+
+.fa-facebook:hover {
+  background: #3B5998;
+color: white;
+}
+
+.fa-twitter:hover {
+background: #55ACEE;
+color: white;
+}
+.fa-linkedin:hover {
+  background: #007bb5;
+  color: white;
+}
+.fa-instagram:hover {
+  background: #125688;
+  color: white;
+}
+.social-icons{
+  display: flex;
+  gap:10px
+}
+
+
+
+
+
+
+
+
+
+
 
 .hero-content{
     margin-left: auto;
     margin-right: auto;
     width: 800px;
     display: flex;
-    align-items: center;
+    flex-direction: row;
     align-content: center;
+    justify-content: center;
     color: white;
-    gap: 50px;
+    gap: 100px;
 }
 
 
-.ut-niitlel {
+.hero-image {
     width: 1000px;
     height: 1000px;
     gap: 0px;
     opacity: 0px;
-    zoom: normal;
+    transition: transform .1s;
 }
-.ut-niitlel:hover{
-    zoom: unset;
+.hero-image:hover{
+  -ms-transform: scale(1.2); /* IE 9 */
+  -webkit-transform: scale(1.2); /* Safari 3-8 */
+  transform: scale(1.1); 
 }
+.animation {
+  font-size: small;
+  color: blue;
+  animation: blink;
+}
+@keyframes animation{
+  25% {
+    opacity: 0.5;
+  }
+  50% {
+    opacity: 0.0;
+  }
+  75% {
+    opacity: 0.5;
+  }
+}
+
+
 .hero-content div{
     height: 446px;
     width: 50%;
     display: flex;
     font-size: xx-large;
 }
-.hero-content h1{
+.hero-h h1{
     -webkit-text-stroke: 1px white;
     color: transparent;
 }
-.hero-content h2{
+.hero-h h2{
     font-size: xx-large;
+}
+.hero-h {
+  display: flex;
+  align-content: center;
+  flex-direction: column;
+  gap: 1px;
+}
+
+
+
+
+.author-dugui {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: auto;
+  background-image: url(dugui.png);
+  border: 1px solid #FFFFFF80;
 }
 
 
@@ -66,7 +170,24 @@
 
 
 
-#menuToggle
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* #menuToggle
 {
   display: block;
   position: relative;
@@ -192,4 +313,4 @@
     text-align: center;
     background-size: 100vh;
     background-color: white;
-}
+} */
