section-2 duussan footer ehelsen

--- a/index.css
+++ b/index.css
@@ -181,10 +181,6 @@ input {
 
 
 
-footer {
-  background-color: white;
-  height: 700px;
-}
 
 
 
@@ -248,42 +244,494 @@ footer {
 
 
 
+.section-3 {
+  background-color: whitesmoke;
+  border-bottom-left-radius: 40px;
+  border-bottom-right-radius: 40px;
+}
+
+
+.mini-picture {
+  height: 36px;
+  width: 36px;
+  border-radius: 50px;
+  border: 1px solid gray;
+  transition: all 0.3s;
+}
+.mini-picture:hover {
+  border: 1px solid white;
+}
+
+.mini-garchig{
+  font-weight: 700;
+  font-size: 12px;
+  opacity: 50%;
+  transition: all 0.2s;
+}
+.mini-garchig:hover {
+  opacity: 100%;
+}
+
+.bogloos {
+  position: relative;
+
+  height: 200px;
+  background-color: black;
+  display: flex;
+  justify-content: space-around;
+}
+
+.songolt {
+  position: absolute;
+  top: -60px;
+  font-size: 17px;
+  color: white;
+  font-weight: 900;
+
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  height: 30px;
+  width: 1250px;
+}
+.posteruud {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+}
+.poster {
+  width: 300px;
+  height: 420px;
+  border-radius: 20px;
+  overflow: hidden !important;
+  transition: 0.3s ease-in-out;
+  border-radius: 15px;
+}
+.poster:hover {
+  transform: scale(1.05);
+
+  border-radius: 15px;
+  transition: 0.2s;
+}
+
 .card {
+  background-color: white;
+  height: 183px;
+  width: 739px;
+  border-radius: 0px 30px 30px 30px;
+  margin-top: 70px;
+  align-content: center;
+  font-weight: 900;
+  font-size: 21.1px;
   display: flex;
+  justify-content: space-around;
+  transition: all 0.2s;
 }
-
-.card-animation {
-    font-weight: 500;
-    font-size: 14px;
-    color: #0078f6;
-    animation: blink 2s linear infinite;
-  }
-  @keyframes blink {
-    25% {
-      opacity: 0.5;
-    }
-    50% {
-      opacity: 0;
-    }
-    75% {
-      opacity: 0.5;
-    }
-  }
-
+.card:hover {
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+  transform: translateY(-0.2rem);
+}
+.card-zurag {
+  height: 135px;
+  width: 135px;
+  border-radius: 50px;
+  margin-top: auto;
+  margin-bottom: auto;
+}
 .card-text {
-  font-size: xx-large;
-}
-
-
-
-
-.too-garchig{
   display: flex;
-  align-content: flex-start;
+  flex-direction: column;
+  transition: all 0.2s;
+  margin-top: auto;
+  margin-bottom: auto;
+  font-size: x-large;
+}
+.card-text:hover {
+  color: #1877f2;
+}
+.card-text-title {
+  font-weight: 700;
+  font-size: 14px;
+  color: #0078f6;
+  animation: blink 2s linear infinite;
+}
+@keyframes blink {
+  25% {
+    opacity: 0.5;
+  }
+  50% {
+    opacity: 0;
+  }
+  75% {
+    opacity: 0.5;
+  }
 }
 
 
-.too-zurag {
+
+
+
+
+
+
+
+
+.week-choose {
+  margin-top: 100px;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-around;
+  background-color: whitesmoke;
+  font-weight: 300;
 }
+.week-choose div {
+  transition: all 0.2s;
+  display: inline-block;
+  padding: 15px;
+  border-bottom: 3px solid transparent;
+}
+.week-choose div:hover {
+  color: blue;
+  border-bottom: 3px solid Blue;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.grid-container {
+  display: grid;
+  margin-left: auto;
+  margin-right: auto;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(10, 1fr);
+  width: 1150px;
+  height: 900px;
+  row-gap: 12px;
+  column-gap: 12px;
+}
+
+
+
+
+.grid-item-1 {
+  background-image: url(background-3.png);
+  background-size: 100%;
+  grid-row: 1 / 5;
+  grid-column: 1 / 7;
+  border-radius: 15px;
+  transition: all 0.3s;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+}
+.grid-item-1:hover {
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+  transform: translateY(-0.2rem);
+}
+.grid-item-2 {
+  grid-row: 1 / 4;
+  grid-column: 7 / 10;
+  background-image: url(background.png);
+  background-size: 100%;
+  border-radius: 15px;
+  transition: all 0.3s;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+}
+.grid-item-2:hover {
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+  transform: translateY(-0.2rem);
+}
+.grid-item-3 {
+  background-image: url(background-2.png);
+  background-size: 100%;
+  grid-row: 1 / 4;
+  grid-column: 10 / 13;
+  border-radius: 15px;
+  transition: all 0.3s;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+}
+.grid-item-3:hover {
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+  transform: translateY(-0.2rem);
+}
+.grid-item-4 {
+  background-image: url(background-4.png);
+  background-size: 100%;
+  transition: all 0.3s;
+  grid-column: 1 / 4;
+  grid-row: 8 / 5;
+  border-radius: 15px;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+}
+.grid-item-4:hover {
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+  transform: translateY(-0.2rem);
+}
+.grid-item-5 {
+  background-image: url(background-5.png);
+  background-size: 100%;
+    transition: all 0.3s;
+  grid-column: 4 / 7;
+  grid-row: 8 / 5;
+  border-radius: 15px;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+}
+.grid-item-5:hover {
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+  transform: translateY(-0.2rem);
+}
+.grid-item-6 {
+  background-image: url(background-6.png);
+  background-size: 100%;
+  transition: all 0.2s;
+  grid-column: 7 / 10;
+  grid-row: 4 / 8;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+  border-radius: 15px;
+}
+.grid-item-6:hover {
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+  transform: translateY(-0.2rem);
+}
+.grid-item-7 {
+  background-image: url(background-7.png);
+  background-size: 100%;
+  grid-column: 10 / 13;
+  grid-row: 4 / 8;
+  transition: all 0.2s;
+  border-radius: 15px;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+}
+.grid-item-7:hover {
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+  transform: translateY(-0.2rem);
+}
+.grid-combined {
+  background: rgba(255, 255, 255, 0.31);
+  border-radius: 0px 0px 16px 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+  border: 1px solid rgba(255, 255, 255, 0.27);
+  width: 100%;
+  height: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.grid-title {
+  font-weight: 400;
+  font-size: 11.6px;
+  color: grey;
+}
+.grid-text {
+  font-size: 15.8px;
+  font-weight: 700;
+}
+
+
+
+
+
+
+
+
+.grid-container-2 {
+  display: grid;
+  margin-left: auto;
+  margin-right: auto;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(10, 1fr);
+  width: 1150px;
+  height: 900px;
+  row-gap: 12px;
+  column-gap: 12px;
+}
+
+
+
+
+
+
+.grid-item-21 {
+  background-image: url(zurag-1.png);
+  background-size: 100%;
+  grid-row: 1 / 5;
+  grid-column: 1 / 7;
+  border-radius: 15px;
+  transition: all 0.3s;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+}
+.grid-item-21:hover {
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+  transform: translateY(-0.2rem);
+}
+.grid-item-22 {
+  grid-row: 1 / 4;
+  grid-column: 7 / 10;
+  background-image: url(zurag-2.png);
+  background-size: 100%;
+  border-radius: 15px;
+  transition: all 0.3s;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+}
+.grid-item-22:hover {
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+  transform: translateY(-0.2rem);
+}
+.grid-item-23 {
+  background-image: url(zurag-3.png);
+  background-size: 100%;
+  grid-row: 1 / 4;
+  grid-column: 10 / 13;
+  border-radius: 15px;
+  transition: all 0.3s;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+}
+.grid-item-23:hover {
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+  transform: translateY(-0.2rem);
+}
+.grid-item-24 {
+  background-image: url(zurag-4.png);
+  background-size: 100%;
+  transition: all 0.3s;
+  grid-column: 1 / 4;
+  grid-row: 8 / 5;
+  border-radius: 15px;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+}
+.grid-item-24:hover {
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+  transform: translateY(-0.2rem);
+}
+.grid-item-25 {
+  background-image: url(zurag-5.png);
+  background-size: 100%;
+  transition: all 0.3s;
+  grid-column: 4 / 7;
+  grid-row: 8 / 5;
+  border-radius: 15px;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+}
+.grid-item-25:hover {
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+  transform: translateY(-0.2rem);
+}
+.grid-item-26 {
+  background-image: url(zurag-6.png);
+  background-size: 100%;
+  transition: all 0.2s;
+  grid-column: 7 / 10;
+  grid-row: 4 / 8;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+  border-radius: 15px;
+}
+.grid-item-26:hover {
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+  transform: translateY(-0.2rem);
+}
+.grid-item-27 {
+  background-image: url(zurag-7.png);
+  background-size: 100%;
+  grid-column: 10 / 13;
+  grid-row: 4 / 8;
+  transition: all 0.2s;
+  border-radius: 15px;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+}
+.grid-item-27:hover {
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+  transform: translateY(-0.2rem);
+}
+.grid-combined-2 {
+  background: rgba(255, 255, 255, 0.31);
+  border-radius: 0px 0px 16px 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+  border: 1px solid rgba(255, 255, 255, 0.27);
+  width: 100%;
+  height: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.grid-title-2 {
+  font-weight: 400;
+  font-size: 11.6px;
+  color: grey;
+}
+.grid-text-2 {
+  font-size: 15.8px;
+  font-weight: 700;
+}
+
+.footer {
+  background-color: black;
+  height: 750px;
+  margin-top: -50px;
+  width: 100vw;
+  z-index: -1;
+  position: absolute;
+}
+
+
+
+
+
+
+
+
+
+.last {
+  background-color: black;
+  height: 700px;
+}
+
+
+.content {
+  color: white;
+  padding: 100px;
+  background-color: gray;
+}
+
+
+
+
+
